# eiffel-graphql-api

./: .coveragerc  .dockerignore  .gitignore  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  Dockerfile.graphql-api  Dockerfile.storage  MANIFEST.in  README.md  README.rst  entry.sh  entry_debug.sh  main.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
deploy/: development.env  docker-compose.yml
docs/: Makefile  coderules.rst  conf.py  examples.rst  index.rst  requirements.txt
src/eiffel_graphql_api/: __init__.py  storage.py  wsgi.py
src/eiffel_graphql_api/graphql/: __init__.py  api.py
src/eiffel_graphql_api/graphql/db/: __init__.py  database.py
src/eiffel_graphql_api/graphql/schemas/: __init__.py  base.py  schema.py  union.py  utils.py
src/eiffel_graphql_api/graphql/schemas/events/: __init__.py  activity_canceled.py  activity_finished.py  activity_started.py  activity_triggered.py  announcement_published.py  artifact_created.py  artifact_published.py  artifact_reused.py  composition_defined.py  confidence_level_modified.py  environment_defined.py  flow_context_defined.py  issue_defined.py  issue_verified.py  source_change_created.py  source_change_submitted.py  test_case_canceled.py  test_case_finished.py  test_case_started.py  test_case_triggered.py  test_execution_recipe_collection_created.py  test_suite_finished.py  test_suite_started.py
src/eiffel_graphql_api/graphql/schemas/lib/: __init__.py  bigint.py  generic.py
src/eiffel_graphql_api/graphql/schemas/links/: __init__.py  activity_execution.py  artifact.py  cause.py  composition.py  confidence_level.py  context.py  element.py  environment.py  flow_context.py  issues.py  iut.py  modified_announcement.py  precursor.py  runtime_environment.py  source_change_base.py  subject.py  terc.py  tercc.py  test_case_execution.py  test_suite_execution.py  utils.py  verification_basis.py
tests/: __init__.py  conftest.py  test_storage.py
tests/lib/: __init__.py  events.py  query_handler.py
tests/test_db/: test_database.py
tests/test_events/: __init__.py
tests/test_events/activity_canceled/: __init__.py  event.py  queries.py  test_activity_canceled.py
tests/test_events/activity_finished/: __init__.py  event.py  queries.py  test_activity_finished.py
tests/test_events/activity_triggered/: __init__.py  event.py  queries.py  test_activity_triggered.py
tests/test_events/announcement_published/: __init__.py  event.py  queries.py  test_announcement_published.py
tests/test_events/artifact_created/: __init__.py  event.py  queries.py  test_artifact_created.py
tests/test_events/artifact_published/: __init__.py  event.py  queries.py  test_artifact_published.py
tests/test_events/artifact_reused/: __init__.py  event.py  queries.py  test_artifact_reused.py
tests/test_events/flow_context_defined/: __init__.py
tests/test_events/test_suite_started/: __init__.py
tests/test_scenario/: __init__.py  event.py  queries.py  test_follow_my_commit.py
