[build-system]
requires = ["setuptools>80", "wheel", "setuptools_scm[toml]>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "eiffel-graphql-api"
description = "Eiffel GraphQL API and storage solution."
dynamic = ["version"]
authors = [{name = "Tobias Persson", email="tobias.persson@axis.com"}]
license = "Apache-2.0"
license-files = [ "LICENSE.txt" ]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3"
]
requires-python = ">= 3.14"
dependencies = [
    "eiffellib[rabbitmq]==2.4.1",
    "requests==2.32.4",
    "pymongo==4.16.0",
    "graphql-core==3.2.7",
    "gql[requests]==4.0.0",
    "Flask==3.1.2",
    # graphql-server==3.0.0 blocked by https://github.com/graphql-python/graphql-server/issues/137
    "graphql-server==3.0.0b7",
    "graphene==3.4.3",
    "gunicorn==23.0.0",
    "greenlet==3.3.0",
    "gevent==25.9.1"
]

[project.urls]
Documentation = "https://eiffel-graphql-api.readthedocs.io"
Homepage = "https://github.com/eiffel-community/eiffel-graphql-api"
Repository = "https://github.com/eiffel-community/eiffel-graphql-api"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "mongomock"]

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov eiffel_graphql_api --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools_scm]
root = "."

[tool.setuptools.packages]
find = { where = ["src"], exclude = ["tests"] }
