[metadata]
name = eiffel-graphql-api
description = Eiffel GraphQL API and storage solution.
author = Tobias Persson
author_email = tobiaspn@axis.com
license = Apache License, Version 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/eiffel-community/eiffel-graphql-api
project_urls =
    Documentation = https://eiffel-graphql-api.readthedocs.io
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    eiffellib[rabbitmq]==2.4.1
    requests==2.31.0
    pymongo[srv]==3.12.0
    graphql-core==3.2.3
    gql[requests]==3.4.1
    Flask==2.3.3
    graphql-server==3.0.0b6
    graphene==3.3
    gunicorn==21.2.0
    greenlet==2.0.2
    gevent==22.10.2

[options.package_data]
* = *.json

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    mongomock

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov eiffel_graphql_api --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = eiffel_graphql_api
